Basic serialize ans deserialize implemented